--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-container-queries",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "description": "",
   "source": "src/index.ts",
   "main": "dist/main.js",
