--- a/.github/workflows/pr_release_check.yml
+++ b/.github/workflows/pr_release_check.yml
@@ -2,7 +2,7 @@ name: PR Release Check 📄
 on:
   pull_request:
     branches:
-      - master
+      - main
     types: [opened, reopened, edited]
 
 env:
