--- a/.github/workflows/pr_semver_check.yml
+++ b/.github/workflows/pr_semver_check.yml
@@ -2,7 +2,7 @@ name: PR Semver Check 🪖
 on:
   pull_request:
     branches:
-      - master
+      - main
     types: [opened, reopened, labeled, unlabeled]
 
 jobs:
