--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,19 +1,18 @@
 name: Publish 🚀
 on:
-  pull_request:
+  push:
     branches:
-      - master
-    types:
-      - closed
+      - main
 
 jobs:
   runs-on: ubuntu-latest
   generate_semver:
+    if: github.event.pull_request.merged == true
     steps:
       - name: Initializing
         uses: actions/checkout@v3
         with:
-          ref: "master"
+          ref: "main"
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Get semver label
         id: label
@@ -48,7 +47,7 @@ jobs:
       - name: Initializing
         uses: actions/checkout@v3
         with:
-          ref: "master"
+          ref: "main"
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup node
         uses: actions/setup-node@v3
