chore: add new github token

--- a/.github/workflows/pr_release_check.yml
+++ b/.github/workflows/pr_release_check.yml
@@ -48,14 +48,14 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: ${{ env.MESSAGE_ERROR }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
       - name: Delete comment
         if: ${{ steps.variables.outputs.deleteComment == 'true' }}
         uses: sandeshjangam/comment-actions@v1
         with:
           type: "delete"
           comment_id: ${{ steps.comment.outputs.comment-id }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
       - name: Result
         run: |
           if ${{(steps.match.outputs.group1 != '')}} == 'true';then
