--- a/.github/workflows/pr_semver_check.yml
+++ b/.github/workflows/pr_semver_check.yml
@@ -19,4 +19,4 @@ jobs:
           add_comment: true
           labels: "semver:patch,semver:minor,semver:major,semver:bypass"
           message: "This PR is being prevented from merging because you haven't added **one** of required labels: {{ provided }}. You'll need to add it before this PR can be merged :no_entry_sign:"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
