--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: "main"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
       - name: Get semver label
         id: label
         uses: zwaldowski/match-label-action@v4
@@ -48,7 +48,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: "main"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -78,4 +78,4 @@ jobs:
           body: "# Changes\n\n${{ steps.match.outputs.group1 }}"
           name: v${{ inputs.tag }}
           tag: v${{ inputs.tag }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
