--- a/.parcelrc
+++ b/.parcelrc
@@ -1,9 +1,6 @@
 {
   "extends": "@parcel/config-default",
-  "compressors": {
-    "*.js": [
-      "@parcel/compressor-gzip",
-      "@parcel/compressor-brotli"
-    ]
-  }
+  "reporters": [
+    "@parcel/reporter-bundle-analyzer"
+  ]
 }
