--- a/.github/workflows/pr_semver_check.yml
+++ b/.github/workflows/pr_semver_check.yml
@@ -17,6 +17,6 @@ jobs:
           mode: exactly
           count: 1
           add_comment: true
-          labels: "semver:patch,semver:minor,semver:major,semver:bypass"
+          labels: "semver:patch,semver:minor,semver:major,semver:prerelease,semver:bypass"
           message: "This PR is being prevented from merging because you haven't added **one** of required labels: {{ provided }}. You'll need to add it before this PR can be merged :no_entry_sign:"
           token: ${{ secrets.AUTH_GITHUB_TOKEN }}
