fix: solve generate_release version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -80,6 +80,6 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           body: "# Changes\n\n${{ steps.match.outputs.group1 }}"
-          name: v${{ inputs.tag }}
-          tag: v${{ inputs.tag }}
+          name: v${{ needs.generate_semver.outputs.value }}
+          tag: v${{ needs.generate_semver.outputs.value }}
           token: ${{ secrets.AUTH_GITHUB_TOKEN }}
